# blog

./: .gitignore  .pre-commit-config.yaml  blog.mdj  docker-compose.yml  requirements.txt
accounts/: authentication.py  models.py  serializers.py  urls.py  utils.py  views.py
accounts/migrations/: 0001_initial.py  0002_bloguser_saved_articles.py  0003_passwordresetdata.py  0004_auto_20210104_2128.py
blog-client/: angular.json  package-lock.json  package.json
blog-client/src/: styles.scss
blog-client/src/app/: app-routing.module.ts  app.component.html  app.component.scss  app.component.spec.ts  app.component.ts  app.module.ts
blog-client/src/app/auth/: auth-routing.module.ts  auth.module.ts
blog-client/src/app/categories/: categories-routing.module.ts  categories.module.ts
blog-client/src/app/comments/: comments.module.ts
blog-client/src/app/core/: core.module.ts
blog-client/src/app/create-post/: create-post.component.html  create-post.component.scss  create-post.component.ts
blog-client/src/app/helpers/: auth.guard.ts  default-error-handler.ts  loggedin.guard.ts  token.interceptor.ts
blog-client/src/app/home/: home.component.html  home.component.scss  home.component.ts  home.module.ts
blog-client/src/app/login/: login.component.html  login.component.scss  login.component.ts
blog-client/src/environments/: environment.ts
blog-client/src/styles/: styles.scss
blog-service/: Dockerfile  pyproject.toml  requirements.txt  start.sh
blog-service/accounts/: authentication.py  serializers.py  urls.py  views.py
blog-service/common/: serializers.py
blog-service/config/: asgi.py  redis.py  settings.py  urls.py
blog-service/core/: mixins.py  models.py  search.py  serializers.py  tasks.py  urls.py  utils.py  views.py
blog-service/core/migrations/: 0001_initial.py  0002_auto_20201031_1836.py  0002_auto_20221114_2111.py  0002_auto_20221129_1827.py  0003_auto_20201102_1916.py  0005_auto_20210104_2128.py
blog-service/services/: aws_utils.py
blog-service/src/common/: serializers.py
blog-service/src/config/: redis.py  settings.py
blog-service/src/core/: models.py  search.py  serializers.py  tasks.py  urls.py  views.py
blog-service/src/core/migrations/: 0003_alter_article_creator_alter_comment_creator.py
blog-service/src/users/: authentication.py  serializers.py  views.py
blog-service/src/users/migrations/: 0002_auto_20221129_1858.py
blog-service/users/: authentication.py  models.py  serializers.py  urls.py  views.py
blog-service/users/migrations/: 0001_initial.py  0002_auto_20221129_1858.py
common/: serializers.py
config/: settings.py  urls.py  wsgi.py
core/: mixins.py  models.py  serializers.py  urls.py  views.py
core/migrations/: 0001_initial.py  0004_category_followers.py
user-service/: config.py  database.py  main.py  pyproject.toml  redis_conf.py  requirements.txt  start.sh
user-service/core/: auth.py  bg_tasks.py  models.py  producers.py  routes.py  schemas.py  tasks.py  utils.py
user-service/notifications/: models.py  tasks.py  websocket.py
user-service/src/: config.py  database.py  main.py  redis_conf.py
user-service/src/core/: auth.py  models.py  routes.py  schemas.py  tasks.py  utils.py
user-service/src/notifications/: models.py  tasks.py
user-service/src/services/: aws.py  database.py
user-service/src/static/.well-known/: jwks.json
user-service/static/.well-known/: jwks.json
(+76 files in other folders)
