[tool.poetry]
name = "user-service"
version = "0.1.0"
description = ""
authors = ["duciito <duciito@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "0.85.2"
uvicorn = {version = "0.19.0", extras = ["standard"]}
motor = "3.1.1"
beanie = "1.13.1"
email-validator = "1.3.0"
fastapi-jwt-auth = {version = "0.5.0", extras = ["asymmetric"]}
fastapi-mail = "1.2.0"
aioboto3 = "10.1.0"
redis = "4.3.4"
websockets = "10.4"

[tool.ruff]
select = [ "E", "F", "UP", "ISC", "I", "W", "B" ]
target-version = "py311"

[tool.ruff.flake8-bugbear]
extend-immutable-calls = ["fastapi.Depends", "fastapi.params.Depends", "fastapi.Body", "fastapi.Query", "fastapi.params.Query"]

[tool.pyright]
venvPath = "."
venv = ".venv"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
